14686
given two files

A.scala
{code}
class A { val x = 1 }
{code}

AA.scala
{code}
object A { val y = 1 }
{code}

compiling them (separately) and then running the interpreter

{code}
scala> new A
<console>:5: error: not found: type A
       new A
           ^

scala> A
res1: A.type = A$$@3f2f529b
{code}

compiling them together gives the right error message (`must be defined in same file`).
